build/log/idf_py_stderr_output_10460
Command: make -j 10 all
In file included from /home/fus/Documents/DO-AN-02/main/do-an-02.c:1:
/home/fus/Documents/DO-AN-02/main/do-an-02.h: In function 'buttonISR':
/home/fus/Documents/DO-AN-02/main/do-an-02.h:10:18: error: implicit declaration of function 'mask' [-Wimplicit-function-declaration]
   10 |     if(GPIO.in & mask(BTN0) == LOW){
      |                  ^~~~
/home/fus/Documents/DO-AN-02/main/do-an-02.h:10:29: error: suggest parentheses around comparison in operand of '&' [-Werror=parentheses]
   10 |     if(GPIO.in & mask(BTN0) == LOW){
      |                  ~~~~~~~~~~~^~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/do-an-02.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:7295: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
